--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#FF5722</color>
     <color name="colorPrimaryDark">#E64A19</color>
     <color name="colorAccent">#64FFDA</color>
+    <color name="colorBlackOverlay">#66000000</color>
+    <color name="colorWhite">#FFFFFFFF</color>
 </resources>
