--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,7 +11,7 @@
     tools:context="com.alsash.reciper.StartActivity">
 
     <ImageView
-        android:id="@+id/app_icon"
+        android:id="@+id/fullscreen_content"
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:gravity="center"
@@ -26,5 +26,17 @@
         android:text="@string/app_name"
         android:textSize="48sp"
         android:textStyle="bold|italic" />
+
+    <LinearLayout
+        android:id="@+id/fullscreen_content_controls"
+        style="?metaButtonBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:background="@color/colorBlackOverlay"
+        android:orientation="horizontal"
+        android:visibility="gone"> <!--Hide ButtonBar-->
+
+    </LinearLayout>
 
 </LinearLayout>
