--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_start_root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorWhite"
+    android:background="@color/white"
     android:fitsSystemWindows="true"
     android:gravity="center"
     android:keepScreenOn="true"
@@ -11,33 +12,17 @@
     tools:context="com.alsash.reciper.StartActivity">
 
     <ImageView
-        android:id="@+id/fullscreen_content"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:gravity="center"
+        android:layout_width="220dp"
+        android:layout_height="220dp"
         app:srcCompat="@mipmap/ic_launcher"
         tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
         android:text="@string/app_name"
         android:textSize="48sp"
         android:textStyle="bold|italic" />
-
-    <!--Hide ButtonBar
-    <LinearLayout
-        android:id="@+id/fullscreen_content_controls"
-        style="?metaButtonBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:background="@color/colorBlackOverlay"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-    </LinearLayout>-->
 
 </LinearLayout>
