--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary">#FF5722</color>
-    <color name="primaryDark">#E64A19</color>
+    <color name="primary_dark">#E64A19</color>
     <color name="accent">#64FFDA</color>
+    <color name="black_overlay">#66000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
