--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -6,7 +6,10 @@
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/splash_image" />
+            android:src="@mipmap/ic_launcher" />
     </item>
 
+    <item
+        android:drawable="@drawable/app_name_vector"
+        android:gravity="bottom|center_horizontal" />
 </layer-list>
