Add abstract activities for navigation drawer implementation

--- a/app/src/main/res/layout/activity_drawer_tab.xml
+++ b/app/src/main/res/layout/activity_drawer_tab.xml
@@ -40,7 +40,7 @@
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/container"
+            android:id="@+id/tab_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
@@ -56,12 +56,12 @@
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/drawer_nav"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_drawer"
-        app:menu="@menu/activity_drawer_drawer" />
+        app:headerLayout="@layout/drawer_header"
+        app:menu="@menu/drawer_nav" />
 
 </android.support.v4.widget.DrawerLayout>
