--- a/app/src/main/res/layout/activity_drawer_item.xml
+++ b/app/src/main/res/layout/activity_drawer_item.xml
@@ -18,7 +18,7 @@
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/item_appbar_height"
+            android:layout_height="200dp"
             android:fitsSystemWindows="true"
             android:theme="@style/AppTheme.AppBarOverlay">
 
