--- a/app/src/main/res/layout/activity_drawer_tab.xml
+++ b/app/src/main/res/layout/activity_drawer_tab.xml
@@ -19,7 +19,7 @@
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/appbar_tab_padding_top"
+            android:paddingTop="8dp"
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
