Update navigation drawer

--- a/app/src/main/res/layout/activity_drawer_frame.xml
+++ b/app/src/main/res/layout/activity_drawer_frame.xml
@@ -53,6 +53,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer_nav" />
+        app:menu="@menu/drawer_main" />
 
 </android.support.v4.widget.DrawerLayout>
