Update navigation drawer

--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -39,7 +39,7 @@
 
     <group
         android:id="@+id/drawer_group_settings"
-        android:checkableBehavior="none">
+        android:checkableBehavior="single">
         <item
             android:id="@+id/drawer_settings"
             android:icon="@drawable/ic_settings"
