--- a/app/src/main/res/layout/activity_drawer_item.xml
+++ b/app/src/main/res/layout/activity_drawer_item.xml
@@ -64,6 +64,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer_main" />
+        app:menu="@menu/drawer" />
 
 </android.support.v4.widget.DrawerLayout>
