--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -10,8 +10,8 @@
     <!-- Account -->
     <ImageView
         android:id="@+id/drawer_account_image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:alpha="0.8"
@@ -36,7 +36,7 @@
         android:id="@+id/drawer_account_contact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
@@ -44,18 +44,20 @@
         app:layout_constraintLeft_toLeftOf="parent"
         tools:text="account.contact@android.com" />
 
-    <ImageView
-        android:id="@+id/drawer_account_settings_icon"
+    <ImageButton
+        android:id="@+id/drawer_account_details"
+        style="@style/Widget.AppCompat.ImageButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="24dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:alpha="0.5"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/drawer_account_settings_description"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ic_settings" />
+        app:srcCompat="@drawable/ic_chevron_down" />
 
 </android.support.constraint.ConstraintLayout>
