--- a/app/src/main/res/menu/recipe_list.xml
+++ b/app/src/main/res/menu/recipe_list.xml
@@ -13,7 +13,7 @@
         android:id="@+id/group"
         android:icon="@drawable/ic_list_group"
         android:title="@string/list_group"
-        app:showAsAction="ifRoom">
+        app:showAsAction="always">
         <menu>
             <item
                 android:id="@+id/group_all"
@@ -55,7 +55,7 @@
         android:id="@+id/sort"
         android:icon="@drawable/ic_list_sort"
         android:title="@string/list_sort"
-        app:showAsAction="ifRoom">
+        app:showAsAction="always">
         <menu>
             <item
                 android:id="@+id/sort_name"
@@ -88,70 +88,62 @@
         android:id="@+id/filter"
         android:icon="@drawable/ic_list_filter"
         android:title="@string/list_filter"
-        app:showAsAction="ifRoom">
+        app:showAsAction="always">
         <menu>
             <item
                 android:id="@+id/filter_clear"
                 android:icon="@drawable/ic_action_cancel"
                 android:title="@string/action_clear" />
 
-            <group
-                android:id="@+id/filter_group_group"
-                android:checkableBehavior="all">
-                <item
-                    android:id="@+id/filter_bookmark"
-                    android:icon="@drawable/ic_content_bookmark"
-                    android:title="@string/list_group_bookmark" />
-                <item
-                    android:id="@+id/filter_label"
-                    android:icon="@drawable/ic_nav_label"
-                    android:title="@string/list_group_label" />
-                <item
-                    android:id="@+id/filter_category"
-                    android:icon="@drawable/ic_nav_category"
-                    android:title="@string/list_group_category" />
-                <item
-                    android:id="@+id/filter_energy"
-                    android:icon="@drawable/ic_food_energy"
-                    android:title="@string/list_group_energy" />
-                <item
-                    android:id="@+id/filter_nutrition"
-                    android:icon="@drawable/ic_food_nutrition"
-                    android:title="@string/list_group_nutrition" />
-                <item
-                    android:id="@+id/filter_time"
-                    android:icon="@drawable/ic_content_time"
-                    android:title="@string/list_group_time" />
-                <item
-                    android:id="@+id/filter_food"
-                    android:icon="@drawable/ic_food_group"
-                    android:title="@string/list_group_food" />
-            </group>
+            <item
+                android:id="@+id/filter_bookmark"
+                android:icon="@drawable/ic_content_bookmark"
+                android:title="@string/list_group_bookmark" />
+            <item
+                android:id="@+id/filter_label"
+                android:icon="@drawable/ic_nav_label"
+                android:title="@string/list_group_label" />
+            <item
+                android:id="@+id/filter_category"
+                android:icon="@drawable/ic_nav_category"
+                android:title="@string/list_group_category" />
+            <item
+                android:id="@+id/filter_energy"
+                android:icon="@drawable/ic_food_energy"
+                android:title="@string/list_group_energy" />
+            <item
+                android:id="@+id/filter_nutrition"
+                android:icon="@drawable/ic_food_nutrition"
+                android:title="@string/list_group_nutrition" />
+            <item
+                android:id="@+id/filter_time"
+                android:icon="@drawable/ic_content_time"
+                android:title="@string/list_group_time" />
+            <item
+                android:id="@+id/filter_food"
+                android:icon="@drawable/ic_food_group"
+                android:title="@string/list_group_food" />
 
-            <group
-                android:id="@+id/filter_group_sort"
-                android:checkableBehavior="all">
-                <item
-                    android:id="@+id/filter_name"
-                    android:icon="@drawable/ic_list_sort_name"
-                    android:title="@string/list_sort_name" />
-                <item
-                    android:id="@+id/filter_account"
-                    android:icon="@drawable/ic_list_sort_account"
-                    android:title="@string/list_sort_account" />
-                <item
-                    android:id="@+id/filter_date_top"
-                    android:icon="@drawable/ic_content_date_top"
-                    android:title="@string/list_sort_date_top" />
-                <item
-                    android:id="@+id/filter_date_end"
-                    android:icon="@drawable/ic_content_date_end"
-                    android:title="@string/list_sort_date_end" />
-                <item
-                    android:id="@+id/filter_rating"
-                    android:icon="@drawable/ic_list_sort_rating"
-                    android:title="@string/list_sort_rating" />
-            </group>
+            <item
+                android:id="@+id/filter_name"
+                android:icon="@drawable/ic_list_sort_name"
+                android:title="@string/list_sort_name" />
+            <item
+                android:id="@+id/filter_account"
+                android:icon="@drawable/ic_list_sort_account"
+                android:title="@string/list_sort_account" />
+            <item
+                android:id="@+id/filter_date_top"
+                android:icon="@drawable/ic_content_date_top"
+                android:title="@string/list_sort_date_top" />
+            <item
+                android:id="@+id/filter_date_end"
+                android:icon="@drawable/ic_content_date_end"
+                android:title="@string/list_sort_date_end" />
+            <item
+                android:id="@+id/filter_rating"
+                android:icon="@drawable/ic_list_sort_rating"
+                android:title="@string/list_sort_rating" />
 
         </menu>
     </item>
@@ -160,7 +152,7 @@
         android:id="@+id/view"
         android:icon="@drawable/ic_list_view"
         android:title="@string/list_view"
-        app:showAsAction="ifRoom">
+        app:showAsAction="always">
         <menu>
             <item
                 android:id="@+id/view_full"
