--- a/app/src/main/res/menu/drawer_navigation.xml
+++ b/app/src/main/res/menu/drawer_navigation.xml
@@ -6,12 +6,12 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/drawer_recipe_list"
-            android:icon="@drawable/ic_nav_recipe"
+            android:icon="@drawable/ic_recipe"
             android:title="@string/drawer_menu_recipes" />
 
         <item
             android:id="@+id/drawer_food"
-            android:icon="@drawable/ic_nav_food"
+            android:icon="@drawable/ic_food"
             android:title="@string/drawer_menu_foods" />
     </group>
 
@@ -20,7 +20,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/drawer_cart"
-            android:icon="@drawable/ic_nav_cart"
+            android:icon="@drawable/ic_cart"
             android:title="@string/drawer_menu_cart" />
     </group>
 
@@ -29,11 +29,11 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/drawer_label"
-            android:icon="@drawable/ic_nav_label"
+            android:icon="@drawable/ic_label"
             android:title="@string/drawer_menu_labels" />
         <item
             android:id="@+id/drawer_category"
-            android:icon="@drawable/ic_nav_category"
+            android:icon="@drawable/ic_recipe_category"
             android:title="@string/drawer_menu_categories" />
     </group>
 
@@ -42,7 +42,7 @@
         android:checkableBehavior="single">
         <item
             android:id="@+id/drawer_settings"
-            android:icon="@drawable/ic_nav_settings"
+            android:icon="@drawable/ic_settings"
             android:title="@string/drawer_menu_settings" />
     </group>
 </menu>
