--- a/app/src/main/res/menu/recipe_list.xml
+++ b/app/src/main/res/menu/recipe_list.xml
@@ -4,9 +4,9 @@
 
     <item
         android:id="@+id/action_search"
-        android:actionViewClass="android.support.v7.widget.SearchView"
-        android:icon="@drawable/ic_action_search"
+        android:icon="@drawable/ic_search"
         android:title="@string/action_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 
     <item
@@ -17,36 +17,23 @@
         <menu>
             <item
                 android:id="@+id/group_all"
-                android:icon="@drawable/ic_action_clear"
+                android:icon="@drawable/ic_clear"
                 android:title="@string/list_group_all" />
             <item
                 android:id="@+id/group_bookmark"
-                android:icon="@drawable/ic_content_bookmark"
+                android:icon="@drawable/ic_bookmark"
                 android:title="@string/list_group_bookmark" />
             <item
                 android:id="@+id/group_label"
-                android:icon="@drawable/ic_nav_label"
+                android:icon="@drawable/ic_label"
                 android:title="@string/list_group_label" />
             <item
                 android:id="@+id/group_category"
-                android:icon="@drawable/ic_nav_category"
+                android:icon="@drawable/ic_recipe_category"
                 android:title="@string/list_group_category" />
             <item
-                android:id="@+id/group_energy"
-                android:icon="@drawable/ic_food_energy"
-                android:title="@string/list_group_energy" />
-            <item
-                android:id="@+id/group_nutrition"
-                android:icon="@drawable/ic_food_nutrition"
-                android:title="@string/list_group_nutrition" />
-            <item
-                android:id="@+id/group_time"
-                android:icon="@drawable/ic_content_time"
-                android:title="@string/list_group_time" />
-
-            <item
-                android:id="@+id/group_food"
-                android:icon="@drawable/ic_food_group"
+                android:id="@+id/group_ingredient"
+                android:icon="@drawable/ic_food_component"
                 android:title="@string/list_group_food" />
         </menu>
     </item>
@@ -58,6 +45,10 @@
         app:showAsAction="ifRoom">
         <menu>
             <item
+                android:id="@+id/sort_clear"
+                android:icon="@drawable/ic_cancel"
+                android:title="@string/action_clear" />
+            <item
                 android:id="@+id/sort_name"
                 android:icon="@drawable/ic_list_sort_name"
                 android:title="@string/list_sort_name" />
@@ -67,20 +58,16 @@
                 android:title="@string/list_sort_account" />
             <item
                 android:id="@+id/sort_date_top"
-                android:icon="@drawable/ic_content_date_top"
+                android:icon="@drawable/ic_date_top"
                 android:title="@string/list_sort_date_top" />
             <item
                 android:id="@+id/sort_date_end"
-                android:icon="@drawable/ic_content_date_end"
+                android:icon="@drawable/ic_date_end"
                 android:title="@string/list_sort_date_end" />
             <item
                 android:id="@+id/sort_rating"
                 android:icon="@drawable/ic_list_sort_rating"
                 android:title="@string/list_sort_rating" />
-            <item
-                android:id="@+id/sort_clear"
-                android:icon="@drawable/ic_action_cancel"
-                android:title="@string/action_clear" />
         </menu>
     </item>
 
@@ -92,20 +79,19 @@
         <menu>
             <item
                 android:id="@+id/filter_clear"
-                android:icon="@drawable/ic_action_cancel"
+                android:icon="@drawable/ic_cancel"
                 android:title="@string/action_clear" />
-
             <item
                 android:id="@+id/filter_bookmark"
-                android:icon="@drawable/ic_content_bookmark"
+                android:icon="@drawable/ic_bookmark"
                 android:title="@string/list_group_bookmark" />
             <item
                 android:id="@+id/filter_label"
-                android:icon="@drawable/ic_nav_label"
+                android:icon="@drawable/ic_label"
                 android:title="@string/list_group_label" />
             <item
                 android:id="@+id/filter_category"
-                android:icon="@drawable/ic_nav_category"
+                android:icon="@drawable/ic_recipe_category"
                 android:title="@string/list_group_category" />
             <item
                 android:id="@+id/filter_energy"
@@ -117,11 +103,11 @@
                 android:title="@string/list_group_nutrition" />
             <item
                 android:id="@+id/filter_time"
-                android:icon="@drawable/ic_content_time"
+                android:icon="@drawable/ic_time"
                 android:title="@string/list_group_time" />
             <item
                 android:id="@+id/filter_food"
-                android:icon="@drawable/ic_food_group"
+                android:icon="@drawable/ic_food_component"
                 android:title="@string/list_group_food" />
 
             <item
@@ -134,11 +120,11 @@
                 android:title="@string/list_sort_account" />
             <item
                 android:id="@+id/filter_date_top"
-                android:icon="@drawable/ic_content_date_top"
+                android:icon="@drawable/ic_date_top"
                 android:title="@string/list_sort_date_top" />
             <item
                 android:id="@+id/filter_date_end"
-                android:icon="@drawable/ic_content_date_end"
+                android:icon="@drawable/ic_date_end"
                 android:title="@string/list_sort_date_end" />
             <item
                 android:id="@+id/filter_rating"
@@ -167,13 +153,13 @@
 
     <item
         android:id="@+id/search_clear"
-        android:icon="@drawable/ic_action_search_clear"
+        android:icon="@drawable/ic_search_clear"
         android:title="@string/action_search_clear"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/reset"
-        android:icon="@drawable/ic_action_reset"
+        android:icon="@drawable/ic_reset"
         android:title="@string/list_reset"
         app:showAsAction="ifRoom" />
 
