--- a/app/src/main/res/menu/recipe_list.xml
+++ b/app/src/main/res/menu/recipe_list.xml
@@ -4,14 +4,31 @@
 
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_color_white"
+        android:icon="@drawable/ic_search"
         android:title="@string/action_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
 
     <item
+        android:id="@+id/view"
+        android:icon="@drawable/ic_list_view"
+        android:title="@string/list_view"
+        app:showAsAction="ifRoom">
+        <menu>
+            <item
+                android:id="@+id/view_full"
+                android:icon="@drawable/ic_list_view_full"
+                android:title="@string/list_view_full" />
+            <item
+                android:id="@+id/view_short"
+                android:icon="@drawable/ic_list_view_short"
+                android:title="@string/list_view_short" />
+        </menu>
+    </item>
+
+    <item
         android:id="@+id/group"
-        android:icon="@drawable/ic_list_group_color_white"
+        android:icon="@drawable/ic_list_group"
         android:title="@string/list_group"
         app:showAsAction="ifRoom">
         <menu>
@@ -32,15 +49,15 @@
                 android:icon="@drawable/ic_recipe_category"
                 android:title="@string/list_group_category" />
             <item
-                android:id="@+id/group_ingredient"
-                android:icon="@drawable/ic_food_component"
+                android:id="@+id/group_food"
+                android:icon="@drawable/ic_food"
                 android:title="@string/list_group_food" />
         </menu>
     </item>
 
     <item
         android:id="@+id/sort"
-        android:icon="@drawable/ic_list_sort_color_white"
+        android:icon="@drawable/ic_list_sort"
         android:title="@string/list_sort"
         app:showAsAction="ifRoom">
         <menu>
@@ -73,7 +90,7 @@
 
     <item
         android:id="@+id/filter"
-        android:icon="@drawable/ic_list_filter_color_white"
+        android:icon="@drawable/ic_list_filter"
         android:title="@string/list_filter"
         app:showAsAction="ifRoom">
         <menu>
@@ -131,23 +148,6 @@
                 android:icon="@drawable/ic_list_sort_rating"
                 android:title="@string/list_sort_rating" />
 
-        </menu>
-    </item>
-
-    <item
-        android:id="@+id/view"
-        android:icon="@drawable/ic_list_view_color_white"
-        android:title="@string/list_view"
-        app:showAsAction="ifRoom">
-        <menu>
-            <item
-                android:id="@+id/view_full"
-                android:icon="@drawable/ic_list_view_full"
-                android:title="@string/list_view_full" />
-            <item
-                android:id="@+id/view_short"
-                android:icon="@drawable/ic_list_view_short"
-                android:title="@string/list_view_short" />
         </menu>
     </item>
 
