--- a/app/src/main/res/menu/recipe_list.xml
+++ b/app/src/main/res/menu/recipe_list.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/view"
-        android:icon="@drawable/ic_list_view"
+        android:icon="@drawable/ic_list_view_full"
         android:title="@string/list_view"
         app:showAsAction="ifRoom">
         <menu>
@@ -160,7 +160,7 @@
     <item
         android:id="@+id/reset"
         android:icon="@drawable/ic_reset"
-        android:title="@string/list_reset"
+        android:title="@string/action_reset"
         app:showAsAction="never" />
 
 </menu>
