--- a/app/src/main/res/menu/recipe_list.xml
+++ b/app/src/main/res/menu/recipe_list.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_search"
+        android:id="@+id/search"
         android:icon="@drawable/ic_search"
         android:title="@string/action_search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="ifRoom|collapseActionView" />
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/view"
