--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
-        <item name="colorControlNormal">@color/icon_light</item> <!-- Don't work - set runtime -->
+        <item name="colorControlNormal">@color/icon_light</item>
         <item name="colorAccent">?android:attr/textColorPrimary</item>
     </style>
 
