Add recipe card

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#FF5722</color>
-    <color name="primary_dark">#E64A19</color>
+    <color name="primary">#ff5722</color>
+    <color name="primary_dark">#e64a19</color>
     <color name="accent">#1de9b6</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="black">#FF000000</color>
+    <color name="secondary">#ffc107</color>
+    <color name="secondary_dark">#ffa000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
     <color name="icon_light">#8a000000</color>
-    <color name="icon_dark">#FFFFFFFF</color>
+    <color name="icon_dark">#ffffff</color>
+    <color name="lighter_gray">#dddddd</color>
+    <color name="darker_gray">#aaaaaa</color>
+    <color name="transparent">#00000000</color>
+    <color name="transparent_primary">#32ff5722</color>
 </resources>
